feat: common areas controllers
